--- a/BuildAllVSProjects/Views/ProjectsView.xaml
+++ b/BuildAllVSProjects/Views/ProjectsView.xaml
@@ -1,35 +1,33 @@
 <UserControl x:Class="BuildAllVSProjects.Views.ProjectsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:BuildAllVSProjects.Views"
              xmlns:cal="http://www.caliburnproject.org"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.Resources>
-        <DataTemplate x:Key="NewIndicatorTemplate" >
+        <DataTemplate x:Key="NewIndicatorTemplate">
             <Grid Width="20">
-                <Rectangle 
-                           Fill="{Binding BuildStatus, Converter={StaticResource BuildStatusToColorConverter}}"
-						   cal:Message.Attach="[Event PreviewMouseLeftButtonUp] = [Action OpenProject($dataContext)]"           
-                           >
-                </Rectangle>
+                <Rectangle
+                    Fill="{Binding BuildStatus, Converter={StaticResource BuildStatusToColorConverter}}"
+                    cal:Message.Attach="[Event PreviewMouseLeftButtonUp] = [Action OpenProject($dataContext)]" />
             </Grid>
         </DataTemplate>
-      
+
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="*"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="AllProjects" AutoGenerateColumns="False" 
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"  >
+        <DataGrid x:Name="AllProjects" AutoGenerateColumns="False"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Sln Location" Binding="{Binding FilePath, Mode=OneWay}"></DataGridTextColumn>
+                <DataGridTextColumn Header="Sln Location" Binding="{Binding FilePath, Mode=OneWay}" />
                 <DataGridTextColumn Header="Name" Binding="{Binding Name, Mode=OneWay}">
 
                     <DataGridTextColumn.EditingElementStyle>
@@ -42,32 +40,33 @@
                     </DataGridTextColumn.EditingElementStyle>
 
                 </DataGridTextColumn>
-                <DataGridTemplateColumn SortMemberPath="BuildStatus" Header="Build status" CellTemplate="{StaticResource NewIndicatorTemplate}" />
+                <DataGridTemplateColumn SortMemberPath="BuildStatus" Header="Build status"
+                                        CellTemplate="{StaticResource NewIndicatorTemplate}" />
             </DataGrid.Columns>
         </DataGrid>
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="*"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
-                <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Label Margin="5">VS Location</Label>
-            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="1" x:Name="VSLocation" ></TextBox>
+            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="1" x:Name="VSLocation" />
             <Label Grid.Column="2" Margin="5">Target solutions dir</Label>
-            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="3" x:Name="TargetDirectory" ></TextBox>
-            <TextBox Style="{StaticResource TextBox_Style}" Width="50" Height="22" Grid.Column="4" x:Name="ExtensionTypes" ></TextBox>
+            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="3" x:Name="TargetDirectory" />
+            <TextBox Style="{StaticResource TextBox_Style}" Width="50" Height="22" Grid.Column="4"
+                     x:Name="ExtensionTypes" />
             <Button Grid.Column="5" Height="22" Width="57" Margin="5" x:Name="StartBrowse">Browse</Button>
             <Button Grid.Column="6" Height="22" Width="57" Margin="5" x:Name="BuildAll" HorizontalAlignment="Right">Build</Button>
             <Button Grid.Column="7" Height="22" Width="57" Margin="5" x:Name="RebuildAll" HorizontalAlignment="Right">Rebuild</Button>
             <Button Grid.Column="8" Height="22" Width="57" Margin="5" x:Name="CancelBuild" HorizontalAlignment="Right">Cancel</Button>
         </Grid>
-        <ContentControl Grid.Row="2" Height="85" x:Name="Reporter">
-        </ContentControl>
+        <ContentControl Grid.Row="2" Height="85" x:Name="Reporter" />
     </Grid>
 </UserControl>
