--- a/BuildAllVSProjects/Views/ProjectsView.xaml
+++ b/BuildAllVSProjects/Views/ProjectsView.xaml
@@ -58,9 +58,9 @@
                 <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Label Margin="5">VS Location</Label>
-            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="1" x:Name="VSLocation" />
+            <TextBox Style="{StaticResource TextBox_Style}" Height="22" MinWidth="50" Grid.Column="1" x:Name="VSLocation" />
             <Label Grid.Column="2" Margin="5">Target solutions dir</Label>
-            <TextBox Style="{StaticResource TextBox_Style}" Height="22" Grid.Column="3" x:Name="TargetDirectory" />
+            <TextBox Style="{StaticResource TextBox_Style}" Height="22" MinWidth="50"  Grid.Column="3" x:Name="TargetDirectory" />
             <TextBox Style="{StaticResource TextBox_Style}" Width="50" Height="22" Grid.Column="4"
                      x:Name="ExtensionTypes" />
             <Button Grid.Column="5" Height="22" Width="57" Margin="5" x:Name="StartBrowse">Browse</Button>
