--- a/BuildAllVSProjects/Views/ProjectsView.xaml
+++ b/BuildAllVSProjects/Views/ProjectsView.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:BuildAllVSProjects.Views"
              xmlns:cal="http://www.caliburnproject.org"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             >
     <UserControl.Resources>
         <DataTemplate x:Key="NewIndicatorTemplate">
             <Grid Width="20">
@@ -25,7 +25,9 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <DataGrid x:Name="AllProjects" AutoGenerateColumns="False"
+        <DataGrid x:Name="AllProjects" AutoGenerateColumns="False" 
+                  cal:Message.Attach="[Event SelectionChanged] =[Action SelectedItemsChanged($this.SelectedItems)]"
+                  
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Sln Location" Binding="{Binding FilePath, Mode=OneWay}" />
@@ -56,6 +58,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
             <Label Margin="5">VS Location</Label>
             <TextBox Style="{StaticResource TextBox_Style}" Height="22" MinWidth="50" Grid.Column="1" x:Name="VSLocation" />
@@ -67,6 +70,7 @@
             <Button Grid.Column="6" Height="22" Width="57" Margin="5" x:Name="BuildAll" HorizontalAlignment="Right">Build</Button>
             <Button Grid.Column="7" Height="22" Width="57" Margin="5" x:Name="RebuildAll" HorizontalAlignment="Right">Rebuild</Button>
             <Button Grid.Column="8" Height="22" Width="57" Margin="5" x:Name="CancelBuild" HorizontalAlignment="Right">Cancel</Button>
+            <ToggleButton Grid.Column="9" Height="22" Width="97" Margin="5" x:Name="SelectedOnly" IsEnabled="{Binding CanBuildAll}" HorizontalAlignment="Right">Selected Only</ToggleButton>
         </Grid>
         <ContentControl Grid.Row="2" Height="85" x:Name="Reporter" />
     </Grid>
